libs/toolkit-macros-tests/tests/ui/fail/missing_name.rs
use toolkit_macros::module;

#[module(capabilities=[stateful])]
pub struct X;

fn main() {}
